json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,117 @@
 {
  "items": [
   {
+    "id": "w_AXJ0ERRGuCqdKmdRyPfw",
+    "url": "https://remote.com/jobs/browse/preview/payment-processor-1",
+    "title": "payment processor",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W OR(europ, european, europeanunion)",
+      "DBG:surround``OR(work,countri,locat,contract,base,you W can) 2W anywher",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/Europe"
+    ],
+    "tagsNames1": [
+      "European time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Kaito LTD",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 30,
+      "maxValue": 40,
+      "info": "",
+      "unit": "HOUR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 14, 2018 6:59:24 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "JOB TYPE: Part Time<br /><br />LOCATION:<br />Remote<br />Anywhere in<br />Europe<br />North America<br /><br />EXPERIENCE: beginner<br /><br />COMPANY: Kaito LTD; 1-10 employees; 0-25% remote;<br /><br />Core Responsibilities:<br />- Facilitate communication between the company and customers<br />- Supports strategic business development, by providing technical assistance, coordination, monitoring, and reporting duties.<br />- Develop and foster efficient relationship with customers and other allies.<br />- Manage customers and stakeholders’ accounts.<br />- Handles payment to be made by customers within the state.<br />- Provide strategic regional business development advisory services where necessary.<br /><br />Remuneration:<br />- i. Salary: $57,600 per annum ($4,800 monthly pay)<br />- 5% commission on every customer’s invoice successfully managed,<br />- $2,500 bonus payment after the first three (3) months of diligent service."
+  },
+  {
+    "id": "Zu2hs6SmRYW-Y1fclkjxQg",
+    "url": "http://jobmote.com/jobs/22215-senior-salesforce-consultant-engagement-manager-remote-opportunity",
+    "title": "Senior Salesforce Consultant / Engagement Manager (REMOTE OPPORTUNITY)",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``OR(travel,visit) W to 4W OR(offic,headquart,onsit)",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ],
+    "hiringOrganization": {
+      "name": "Zennify",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 13, 2018 8:21:16 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Job Description</p><p>Zennify is looking for a qualified candidate to join their team as a Senior Salesforce Consultant with a strong Financial Services Background. The individual will be responsible for managing strategic engagements with clients, including designing and delivering scalable solutions using Salesforce.com and other cloud-based technologies. The individual will work with a team to implement mid- and large-scale customer projects encompassing process analysis &amp; design, system requirements &amp; configuration, change management, training and deployment. Clients range from local, small and mid-sized companies to multi-national enterprise corporations and state and federal agencies.</p><p><strong>THIS IS A REMOTE POSITION.</strong> Zennify is headquartered in Boise, ID with another office located in Sacramento, CA. Working remote, candidates need to be prepared for up to 30% travel to both headquarters and client locations.</p><p>Must be eligible to work in the US as we are not currently sponsoring visas.</p><p><strong>Responsibilities</strong></p><p>· Lead delivery teams to execute all project implementation phases including project planning, requirements gathering, solution design, development, system and user testing, deployment, training and post go live support</p><p>· Manage customer relationships and day-to-day interactions &amp; escalations</p><p>· Oversee process driven customer conversations and workshops related to sales processes, customer service, marketing automation and operational processes</p><p>· Define project short and long-term goals, identify success criteria, and coordinate client and delivery resource roles and responsibilities</p><p>· Drive delivery teams to produce on­-time, high quality, scalable and suitable services and deliverables</p><p>· Contribute to pre-sales customer scoping sessions with the Business Development Team &amp; assist with project proposal development</p><p>· Contribute to a collaborative team environment by encouraging and leading solution brainstorming, internal knowledge sharing and skill development</p><p><strong>Qualities of the Ideal Candidate</strong></p><ul><li>Thrives in a team-based, high energy and fast-paced environment</li><li>Service-oriented and innately driven to produce outstanding customer satisfaction and results</li><li>Enjoys discovering, learning about and implementing new technologies</li><li>Analytical and prone to logically and methodically work through problems</li><li>Strong aptitude for prioritization and multi-tasking in a deadline-driven environment</li><li>A positive demeanor with exceptional interpersonal skills with respect to internal and external interactions and relationships</li><li>Ability to meet travel requirements, when applicable (no more than 20% travel expected)</li><li>A desire to proactively contribute to, and enhance, team outputs</li><li>Experience working in Financial Services or Banking</li><li>Working knowledge of integration software such as Mulesoft, Jitterbit, Informatica</li></ul><p><strong>Preferred Qualifications</strong></p><ul><li>One or more of the following Salesforce Certifications: Sales Cloud Consultant, Service Cloud Consultant, Community Cloud Consultant, Financial Services Cloud Accredidation</li><li>Strong Financial Services background</li><li>Experience working with one or more of the following platforms: Ncino, Core Logic, Orion, Loan Origination Systems</li><li>Understanding of Core Banking Systems (Fiserv, Symitar, etc)</li></ul><p>Company DescriptionAt Zennify, we know how to focus, build and balance. We know systems and can untangle even the most complex of technical messes to ensure everything is running in sync. Our expertise in the Salesforce suite of products has helped bring balance to hundreds of clients. We evaluate existing technologies, recommend unique cloud-based solutions and expertly build solutions. We take into account our clients' specific needs as well as their existing infrastructure to develop context laden, elegant solutions. Simply put, Zennify brings competing interests, incompatible systems and seemingly unlinked challenges into alignment to develop technology solutions that drive businesses forward. </p><p>Our team is comprised of gritty, passionate problem-solvers. We have the vision to create lasting, long-term solutions for our clients. Because we view our clients as partners, we're deeply invested in our work and the success of our projects. At Zennify, innovation is in our every breath. We're motivated to increase efficiencies and ultimately help the bottom line of our client's business. We dig deep. Zennify works hard to understand the needs of our clients and align those needs with working, effective solutions.</p></div></div><div></div></div></div>"
+  },
+  {
+    "id": "zkX7zDTdQMqF3BY_GPDPIw",
+    "url": "https://feeds.feedblitz.com/~/563956316/0/problogger/jobs~Love-Instagram-Wanna-write-about-it-This-is-for-you/",
+    "title": "Love Instagram? Wanna write about it? This is for you.",
+    "tags": [
+      "DBG:surround``2N(anywher, remot)",
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``can 2W remot",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 13, 2018 2:00:00 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Love Instagram? Wanna write about it? This is for you.</h2><div>Company: Upleap</div>Location: Anywhere<br><br>Job Type: Contract<div>  <h4>Description</h4>  <div>                    <p><a href='https://upleap.com' rel='nofollow'>Upleap</a> is looking for writers that love Instagram.</p><p><strong>What kind of job is this?</strong></p><p>It's a writing gig (who would've guessed?) that can become a regular, long-term thing. You have relative freedom to write about anything and everything Instagram.</p><p>We've got a long list of basic keywords to base your articles on. Most importantly, articles need to provide some kind of value to the reader. Whether it's a tip to get more engagement&nbsp;or a trend you've recently discovered, letting our audience know through your post is all that we ask for.</p><p><strong>Why you'll want this gig:</strong></p><ul><li>It's long-term and regular if you're good</li><li>You can choose what to write about from a huge list we've created</li><li>We pay on time</li><li>You can work remotely, anywhere in the world</li><li>If you write better in your underwear we won't judge you</li></ul><p><strong>We're offering you:</strong></p><ul><li>$50 for a 1200 word article</li><li>$60 for a 1500 word article</li><li>Opportunity to work with us full-time.</li><li>And an opportunity to step into a bigger role if you're a good fit :)</li></ul><p><strong>You need to:</strong></p><ul><li>Be passionate about the 'gram</li><li>Be a lover of short sentences</li><li>Be someone who can put pen to paper when it comes to tips and tricks</li><li>Obviously be an active Instagrammer (<span>no exceptions</span>)</li><li>Be able to write in a fun, lighthearted way (think Buzzfeed style articles!)</li><li>Have a PayPal account so we can pay you.</li></ul><p><strong>Your content</strong>:</p><p>Make my life simple by knowing how to:</p><ul><li>Write short sentences</li><li>Keep things entertaining and people reading</li><li>Follow basic instructions</li><li>Proofread your own work (nobody likes correcting grammar)</li></ul><p>Lastly,&nbsp;there are writing formulas we will happily share with you. Your writing will improve with us. And you'll become infinitely more valuable to us (or any other biz for that matter)!</p><p>Feel free to apply and we'll get back to you within a day or two.</p>          </div>                <h4>Application Instructions</h4>    <div>                            Let's keep this super simple:<br><br>1. Send me an email to ahmad[a-t]upleap.com<br>2. Let us know who you are, and why you want this gig!<br>3. Specify your Instagram username<br>4. Attach a link to a Google Doc containing anything else you feel is relevant to your application<br>5. Tell us what your target audience is if you were writing for Upleap.<br>6. Tell us what your ambitions are (is this just a side-hustle? Do you want to freelance or work with us full-time?)<br>7. Write a 300-word piece about a new trend on Instagram:<br><br>Tone of voice: Lighthearted, fun<br>Writing style: Buzzfeed-esque<br>Keyword: &quot;Instagram Trend&quot; (include this at least three times anywhere in the article, including your title)<br><br>If you're really interested in this position but you're afraid you'll mess something up... you can always shoot a message my way and I'll provide some additional guidance and a few examples. No problemo!                </div>          </div>"
+  },
+  {
     "id": "Q9hXRGZsRAy7qS7IU0RjKA",
     "url": "https://jobspresso.co/job/english-online-language-tutor/",
     "title": "English Online Language Tutor",
@@ -4274,40 +4385,6 @@
     "published": "Jun 16, 2018 1:31:26 PM",
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "content": "<h2>A journalist with a coverage in Japan</h2>   Location:    Remote    Japan  <div>  Role and job type:  Community Contractor </div> <div>  <h3>Job Description</h3>  <p>We are looking for journalists who can help us to post our press releases, news articles and publications in japanese media.</p>  <p>We are ready to discuss conditions and pay for a necessary contacts.</p>  <h4>Salary range</h4>  <p>By agreement</p> </div>"
-  },
-  {
-    "id": "ZU0RvGrAQsKmYMf8rKvbjg",
-    "url": "https://cjl.ist/2JLOyXV",
-    "title": "Author of the cryptocurrency articles",
-    "tags": [
-      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
-      "REMOTE1/100",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Jun 14, 2018 3:33:13 PM",
-    "validThrough": "Jan 1, 1970 1:00:00 AM",
-    "content": "<h2>Author of the cryptocurrency articles</h2>   Location:    Remote    Remote  <div>  Role and job type: ️ Content Full-time </div> <div>  <h3>Job Description</h3>  <p>We are now expanding the staff and are looking for new editors and talented authors and exclusive materials for our team! You will need to Writing articles in English. We consider different options of cooperation, if you can write for us interesting articles, offer materials about mining, cryptocurrencies, blockchain, their regulation aspects, legislation, financial technologies, then we will reward you exactly!</p>  <h4>Salary range</h4>  <p>Competitive</p> </div>"
   }
 ]
 }
