--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,49 @@
 {
  "items": [
   {
+    "id": "VY26ikVCTySfeO6fgZ8fjA",
+    "url": "https://stackoverflow.com/jobs/199838/sr-mobile-developer-smiledirectclub?a=151cPBbZfmRq",
+    "title": "Sr. Mobile Developer at SmileDirectClub (Nashville, TN) ",
+    "tags": [
+      "DBG:surround``3N(locat,remot)",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:cocoa-touch/apple/8",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/14",
+      "DBG_TECH1:k/t/w:ios/mobile/14",
+      "DBG_TECH1:k/t/w:swift/apple/15",
+      "DBG_TECH1:k/t/w:swift/mobile/24",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=38, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=53, java=0, gamedev=8, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "SmileDirectClub",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 14, 2018 9:06:11 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2><span>Sr. Mobile Developer</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                                    <div>                                        <span>Industry: </span>                                        <span>3D Printing, Dental, Retail</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Company size: </span>                                        <span>1k-5k people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: SmileDirectClub | Nashville, TN<br></div>                    <h3>Remote details</h3>                    <div>                        <div>                                                                                        <div>                                    <span>Office Location:</span>                                    <span>Nashville, TN.</span>                                        <span>Employees can also work full time from this office.</span>                                </div>                                                                                        <div>                                    <span>Relocation Assistance:</span>                                    <span>Yes</span>                                </div>                        </div>                    </div>                <h3>Technologies</h3><div></div><div>ios</div><div>swift</div><div>https://smiledirectclub.com</div>                <h3>Job description</h3>                <div>We're SmileDirectClub, and we believe everyone deserves a smile they'll love. We also believe that you deserve a job you'll love. Good thing you found us, and we found you. At SmileDirectClub, we're all about empowering transformation. We want people to become more confident in how they look, how they feel, and how they think. So we're spreading smiles and positivity all over the country.It's no small task. That's why we're looking for energetic, passionate, and confident team members who can help turn frowns into life-changing grins. Are you up for it?SmileDirectClub is looking for a Senior Mobile Developer - iOS responsible for the development and maintenance of applications aimed at a range of iOS devices including mobile phones and tablet computers. The primary focus will be development of iOS applications and their integration with back-end services. The job requires working alongside other engineers and developers working on different layers of the infrastructure. Therefore, a commitment to collaborative problem solving, sophisticated design, and the creation of quality products is essential.Responsibilities:    Design and build applications for the iOS platform preferably in Swift.    Ensure the performance, quality, and responsiveness of applications    Collaborate with a team to define, design, and ship new features    Identify and correct bottlenecks and fix bugs    Help maintain code quality, organization, and automatization    Implement key integrations related to analytics and data collectionIt will really make us smile if you have:    Proficient with Swift and Cocoa Touch    Experience with iOS frameworks such as Core Data, Core Animation, etc.    Experience with offline storage, threading, and performance tuning    APIs to connect iOS applications to back-end servicesRESTfulFamiliarity with    Knowledge of other web technologies and UI/UX standards    Understanding of Apple's design principles and interface guidelines    Experience with performance and memory tuning with tools {{such as Instruments and Shark, depending on project needs}}    Familiarity with cloud message APIs and push notifications    Knack for benchmarking and optimization    Proficient understanding of Git    Familiarity with continuous integrationBenefits of joining the club:    Medical, Dental and Vision Insurance    401K with match    PTO    Aligner and Whitening Benefit    Collaborative work environment and positive cultureSmileDirectClub was founded on a simple belief: everyone deserves a smile they love. The Company is the first digital brand for straightening your smile, created after the realization that recent trends in 3D printing and telehealth could bring about disruptive change to the invisible aligner market by matching licensed professionals, a quality clear-aligner product, and customers together. By leveraging proprietary, cutting-edge technology, SmileDirectClub, LLC-affiliated dentists are providing greater access of care to consumers who couldn't otherwise afford orthodontic treatment to get a better smile.Want to learn more about us?Check out <a href='https://smiledirectclub.com' rel='nofollow'>https://smiledirectclub.com</a>                </div>            <div>        <a href='https://smiledirectclub.applicantstack.com/x/apply/a2do6huxgce2/aabh' rel='nofollow'>                        Apply now        </a></div>                    <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Medical</span>                            </li>                            <li>                                <span></span>                                <span>Dental</span>                            </li>                            <li>                                <span></span>                                <span>Vision</span>                            </li>                            <li>                                <span></span>                                <span>401(k)</span>                            </li>                            <li>                                <span></span>                                <span>401(k) Matching</span>                            </li>                            <li>                                <span></span>                                <span>PTO</span>                            </li>                            <li>                                <span></span>                                <span>Personal time</span>                            </li>                            <li>                                <span></span>                                <span>Catered lunches</span>                            </li>                            <li>                                <span></span>                                <span>Team building</span>                            </li>                            <li>                                <span></span>                                <span>Aligner discount for employees</span>                            </li>                    </ul>                "
+  },
+  {
     "id": "85AftcKiR0uXefR5m9HWSg",
     "url": "https://remoteok.io/jobs/68465",
     "title": "IOS Engineer",
