--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,79 @@
 {
  "items": [
   {
+    "id": "b6zyDNjnQri3dhbOtRGTmw",
+    "url": "http://workinstartups.com/job-board/job/72025/vloggers-at-film-daily/",
+    "title": "Vloggers",
+    "tags": [
+      "DBG:surround``OR(work,countri,locat,contract,base,you W can) 2W anywher",
+      "DBG_TECH1:k/t/w:wordpress/php/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=5, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/php",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "php"
+    ],
+    "hiringOrganization": {
+      "name": "Film Daily",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 15, 2018 2:02:44 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "Freelance writer rate + site credits + various perks<br />Minimum 3-month commitment & min. 1 feature per month<br /><br />Location: Anywhere in the known universe with an internet connection OR from our offices in LA and Mexico City<br /><br />Our publication is growing quickly and we’re looking for a team of talented freelance entertainment Vloggers to create videos about the ever-expanding world of indie film, filmmaking, film festivals, and content streaming.<br /><br />Our target audience is Gen Z, Gen X, and Millennials. We aim to keep our audience entertained about entertainment.<br /><br />We foster a culture of communication, community, teamwork, and collaboration. Join us now!<br /><br />What you’ll look like:<br />Film & TV obsessive<br />You know your Kurosawa from your Kubrick, your Lynch from your Leigh, your Girls from your Broad City.<br />High achiever<br />You (think you) understand the way the film & TV industries works.<br />You know how to use web searches to learn new skills.<br />Dedicated lifelong learner<br />Looking for a new challenge<br />Willing to do whatever it takes to achieve results<br />Able to prioritize your workload<br />You think change in Hollywood is long overdue.<br />Impressive portfolio of published articles<br />Desire to work as a journalist or editor<br />Understanding of the way online publications work<br />Tenacious<br />You know A LOT about film and TV.<br />You’re a film snob, with strong opinions.<br />Words are just about your favorite thing.<br />You live on the internet.<br />You can take a complicated story and cut it down to 280 characters.<br />What we can offer<br />Access to stream endless films & TV<br />Paid rates per article<br />Full credit/author page<br />As few or as many hours as you’d like<br />The Gig<br />Film Daily is looking for the voices of your generation<br />We need contributors for our hungry website<br />Must have some social media and WordPress experience<br />Skills<br />Vlogging<br />Tweeting<br />Self-editing"
+  },
+  {
+    "id": "oFcbfqBJQly2Jgt6XmAScA",
+    "url": "http://jobmote.com/jobs/22376-100-remote-required-for-senior-oracle-hyperion-epm-consultant",
+    "title": "100% Remote Required For :::: Senior Oracle Hyperion EPM Consultant",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:extjs/frontend/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=8}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Econosoft",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 15, 2018 1:20:41 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>Position:Senior Oracle Hyperion EPM Consultant</strong></p><p><strong>Location: 100% Remote</strong></p><p><strong>Interview: Phone &amp; Skype</strong></p><p><strong>Duration: 3-4+ Weeks</strong></p><p><strong>Skills: Oracle, Hyperion, EPM,</strong> <strong>SDLC, FDMEE,</strong>** ODI configuration, Oracle EBS, Jython scripting, automation,** drill back functionality.</p><p><strong>Description:</strong></p><p>Senior Hyperion Consultant- experience with Oracle Hyperion EPM SDLC with functional and technical background in both accounting processes and information systems.</p><p>Expertise in FDMEE and ODI configuration with Oracle EBS.</p><p>FDMEE implementation experience including Jython scripting, automation and knowledge of drill back functionality.</p><p><strong>Regards,</strong></p><p><strong>(ext 4357)</strong></p><ul><li>provided by Dice Oracle, Hyperion, EPM, SDLC, FDMEE,ODI configuration, Oracle EBS, Jython scripting, automation, drill back functionality </li></ul></div></div><div></div></div></div>"
+  },
+  {
     "id": "w_AXJ0ERRGuCqdKmdRyPfw",
     "url": "https://remote.com/jobs/browse/preview/payment-processor-1",
     "title": "payment processor",
