json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,100 @@
 {
  "items": [
   {
+    "id": "_cCPoRUzQ4WhWwM7FnQuGg",
+    "url": "https://remote.co/job/ios-developer-4/",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:air/frontend/8",
+      "DBG_TECH1:k/t/w:air/mobile/8",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:app-store/mobile/8",
+      "DBG_TECH1:k/t/w:coffeescript/frontend/2",
+      "DBG_TECH1:k/t/w:coffeescript/nodejs/2",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/20",
+      "DBG_TECH1:k/t/w:ios/mobile/20",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=44, go=0, nodejs=2, bigdata-ml=0, ruby=0, apple=31, java=0, gamedev=8, php=0, embedded=0, frontend=10}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Dribbble",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 16, 2018 5:39:45 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>iOS Developer at <span>Dribbble</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span></div><div>            <p><strong>UNITED STATES</strong></p><p><strong>ENGINEERING</strong></p><p><strong>CONTRACT</strong></p><p><strong>About Us:</strong></p><p>Founded in 2009, Dribbble has grown to become a top global community for designers and creative professionals and a destination for inspiration for tens of millions of people. Dribbble is on a mission to build the world’s best platform for designers and creative professionals to gain inspiration, feedback, education, community, and job opportunities.</p><p>We are a bootstrapped and profitable company helping the world’s design talent share their creations and get hired. Dribbble has become a go-to resource for discovering and connecting with designers and creative talent around the globe.</p><p>Dribbble helps some of the world’s best design-forward companies including Apple, Airbnb, IDEO, Facebook, Google, Dropbox, Slack, Shopify, and Lyft get exposure for their design teams and hire expert creatives.</p><p>We are looking for an iOS developer to own the development and maintenance of our iOS application!&nbsp;<strong>This role is a 3 month, potential contract-to-hire position, working 3 days per week.</strong></p><p>As an iOS developer, you’ve been coding for several years and have the skill and wisdom to contribute to a small team of developers. You’ll be responsible for helping maintain an iOS application that supports millions of visitors each month and has wide visibility in the design industry. Product ownership, feature development, bug fixing, testing, caching, scaling, and performance should all be familiar concepts that you’ve addressed in your applications. You should be able work independently (though we collaborate continuously) and thrive on identifying, as well as solving, problems. We like to think we’re always helping each other improve, so we want someone who shares our commitment to collaborative problem solving and sophisticated design.</p><p><strong>Responsibilities</strong></p><ul><li>Maintain the code base for the Dribbble iOS application</li><li>Distribute beta versions of the app via TestFlight</li><li>Ensure the performance, quality, and responsiveness of the application</li><li>Collaborate with the team to define, design, and ship new features</li><li>Identify and fix bugs</li><li>Help maintain code quality, organization, and automatization</li></ul><p><strong>Skills and Qualifications</strong></p><ul><li>Proficient with Objective-C</li><li>Knowledge of App Store Connect and app distribution process</li><li>Experience with iOS frameworks such as Core Data, Core Animation, etc.</li><li>Experience with offline storage, threading, and performance tuning</li><li>Familiarity with RESTful APIs to connect iOS applications to back-end services</li><li>Knowledge of other web technologies and UI/UX standards</li><li>Understanding of Apple’s design principles and interface guidelines</li><li>Experience with performance and memory tuning with tools</li><li>Familiarity with cloud message APIs and push notifications</li><li>Knack for benchmarking and optimization</li><li>Proficient understanding of Git</li><li>Familiarity with continuous integration</li><li>Bachelor’s degree or equivalent experience</li><li>3+ years of iOS development experience</li></ul><p><strong>Why you want to work here:</strong></p><p>At Dribbble, you’ll join a diverse team dedicated to learning, teaching, and growing; as individuals, as a team, as a business, and as a community. As a workplace, we pride ourselves on doing right by our employees, and have a benefits package that makes being a part of the Dribbble team a dream job and something to be really proud of:</p><ul><li><strong>Work from anywhere.</strong>&nbsp;<strong>We are a 100% distributed team – no need to relocate to work for us.</strong></li><li><strong>Build your dream schedule</strong>: We trust you to set your own schedule to meet the needs of your team and project.</li><li><strong>Stay healthy.&nbsp;</strong>Fully paid medical and dental insurance for you and your family – and a work-life balance that puts your mental health first.</li><li><strong>Unplug.</strong>&nbsp;Unlimited paid-time-off so you can relax and recharge.</li><li><strong>Bonus holidays:</strong>&nbsp;We observe both American and Canadian Federal holidays company-wide!</li><li><strong>Pro tools.</strong>&nbsp;MacBook Pro (or Air) and all the tools you need to do your best work.</li><li><strong>Get your learn on.</strong>&nbsp;We cover books, conferences, courses get smarter!</li><li><strong>Family first.</strong>&nbsp;We offer 3 months paid parental leave for US employees, and EI parental leave top ups for Canadian employees when your family grows.</li><li><strong>Stay focused:</strong>&nbsp;We’re meeting-free on Mondays and Fridays</li><li><strong>Perk up.</strong>&nbsp;Feel good about treating yourself to a latte or two with your monthly coffee bonus. Now you’re not just loitering at coffee shops!</li><li><strong>Buff up</strong>. Everyone needs to get away from the desk sometimes. We cover gym and exercise reimbursements so that you can stay fit.</li><li><strong>Save up.</strong>&nbsp;Put pre-tax savings into a 401k or RRSP. You’ll appreciate it later.</li><li><strong>Hang out.</strong>&nbsp;<strong>We get our team together for some quality face-to-face time a few times a year. Each time we meet up in a different city around the world.</strong></li></ul><p>We are an equal opportunity employer and value diversity at our company. Women, people of color, members of the LGBTQ community, individuals with disabilities, and veterans are strongly encouraged to apply.</p>        </div><div>        <a href='https://jobs.lever.co/dribbble/4b65d1ac-464d-46b1-b9bb-6faa7d73bb0a' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "4AaDPp97SaSyIZj9181jyA",
+    "url": "http://jobmote.com/jobs/22475-principal-ios-engineer-100-remote",
+    "title": "Principal iOS Engineer - 100% REMOTE",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:iphone/apple/2",
+      "DBG_TECH1:k/t/w:iphone/mobile/2",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=7, mobile=28, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=20, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Purple Squirrel HR",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 15, 2018 9:21:45 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>About Us:</strong></p><p>We are a grocery delivery startup focused on delivering groceries and home essentials, we already have over 500,000 items from local stores in its catalog.</p><p>Customers can choose from a variety of local stores including Safeway, Whole Foods, Super Fresh, Harris Teeter, Shaw's, Mariano's, Jewel-Osco, Stanley's and Costco. Additionally, customers can mix items from multiple stores into one order.</p><p>We have over 200 employees and a $4B valuation and are looking for a driven, talented iOS developer to join our team. If this sounds like you, please apply today!</p><p><strong>Responsibilities:</strong></p><ul><li>Executing a variety of projects to extend and enhance our application for iPhone and iPad</li><li>Building new features to create an experience nothing short of magical</li></ul><p><strong>Requirements:</strong></p><ul><li>Bachelor's degree in computer science is preferred with 8+ years of software development experience and at least 5 years of iOS app development experience</li><li>Very strong development skills in Swift or Objective C, iOS SDK, and good general programming and algorithm skills</li><li>Superior analytical skills and a strong sense of urgency and ownership in your work</li><li>Proven customer facing application development, troubleshooting, deployment, and application performance tuning experience</li><li>Proven ability to build, launch and iterate on apps under pressure</li><li>Previous experience working remote preferred</li><li>Startup experience nice to have</li></ul><p><strong>Benefits:</strong></p><ul><li>Equity in a company valued at $4B!</li><li>Talented and collaborative coworkers who will both push and support you</li><li>Top 1% most competitive base salary</li><li>Medical, dental, vision benefits and 401(k) retirement plan</li><li>Take what you need vacation (and we really mean it)</li><li>16 weeks maternity leave / 8 weeks paternity leave so you can truly bond with your child</li><li>Complimentary company membership</li><li>Sign-on Bonus!</li></ul><p>Company DescriptionPurple Squirrel HR is a staffing agency representing the above client (see full job description). If you are interested in the above job, please apply today and we will promptly review your application and get in touch if it looks like a fit!</p></div></div><div></div></div></div>"
+  },
+  {
     "id": "VY26ikVCTySfeO6fgZ8fjA",
     "url": "https://stackoverflow.com/jobs/199838/sr-mobile-developer-smiledirectclub?a=151cPBbZfmRq",
     "title": "Sr. Mobile Developer at SmileDirectClub (Nashville, TN) ",
